deploy/kubernetes/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stardesk-web
  namespace: stardesk
  labels:
    app: stardesk-web
    app.kubernetes.io/name: stardesk-web
    app.kubernetes.io/part-of: stardesk
spec:
  type: ClusterIP
  selector:
    app: stardesk-web
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
